[gd_scene load_steps=9 format=3 uid="uid://qm45mrbn5w5i"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_5tidw"]
[ext_resource type="Texture2D" uid="uid://cnu4myw6m0qu6" path="res://Assets/Marketing/main_menu.png" id="2_k3tfx"]
[ext_resource type="Theme" uid="uid://dj34p0jgvyynb" path="res://menu_theme.tres" id="2_uqj6p"]
[ext_resource type="PackedScene" uid="uid://cdyy5qayqrtns" path="res://Scenes/options.tscn" id="4_iodgg"]
[ext_resource type="Texture2D" uid="uid://61cwi7mhiov1" path="res://Assets/Sprites/container-export.png" id="6_c80e3"]
[ext_resource type="PackedScene" uid="uid://cv2o5cvqw0uq" path="res://Scenes/controls.tscn" id="6_uuysc"]
[ext_resource type="PackedScene" uid="uid://bqxojq50xph0a" path="res://Scenes/how_to_play.tscn" id="7_0e2hi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjmj1"]
texture = ExtResource("6_c80e3")
texture_margin_left = 30.0
texture_margin_top = 30.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5tidw")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k3tfx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 215.0
offset_right = -173.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MenuContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 169

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MenuContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 2.72
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Main" type="VBoxContainer" parent="MarginContainer/MenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
layout_mode = 2
theme = ExtResource("2_uqj6p")
text = "play"
alignment = 0

[node name="Separator2" type="Control" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
layout_mode = 2
theme = ExtResource("2_uqj6p")
text = "OPTIONS"
alignment = 0

[node name="Separator4" type="Control" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
layout_mode = 2

[node name="ControlsButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
layout_mode = 2
theme = ExtResource("2_uqj6p")
text = "controls"
alignment = 0

[node name="Separator5" type="Control" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
layout_mode = 2

[node name="HowToPlayButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
layout_mode = 2
theme = ExtResource("2_uqj6p")
text = "How to play"
alignment = 0

[node name="Separator3" type="Control" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/Main"]
custom_minimum_size = Vector2(240, 120)
layout_mode = 2
theme = ExtResource("2_uqj6p")
text = "QUIT"
alignment = 0

[node name="SideMenu" type="MarginContainer" parent="MarginContainer/MenuContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.72

[node name="Panel" type="Panel" parent="MarginContainer/MenuContainer/SideMenu"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mjmj1")

[node name="ControlsContainer" type="MarginContainer" parent="MarginContainer/MenuContainer/SideMenu/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 7.0
offset_right = -9.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 2.72
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Controls" parent="MarginContainer/MenuContainer/SideMenu/Panel/ControlsContainer" instance=ExtResource("6_uuysc")]
layout_mode = 2

[node name="HowToPlayContainer" type="MarginContainer" parent="MarginContainer/MenuContainer/SideMenu/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = -5.0
offset_right = 6.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 2.72
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HowToPlay" parent="MarginContainer/MenuContainer/SideMenu/Panel/HowToPlayContainer" instance=ExtResource("7_0e2hi")]
layout_mode = 2

[node name="OptionsContainer" type="MarginContainer" parent="MarginContainer/MenuContainer/SideMenu/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -28.0
offset_right = 21.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 2.72
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Options" parent="MarginContainer/MenuContainer/SideMenu/Panel/OptionsContainer" instance=ExtResource("4_iodgg")]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/MenuContainer/MarginContainer/Main/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuContainer/MarginContainer/Main/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuContainer/MarginContainer/Main/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuContainer/MarginContainer/Main/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuContainer/MarginContainer/Main/QuitButton" to="." method="_on_quit_button_pressed"]
